--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol data-ns-test="shoppingList">
+		<li>Silver ornament</li>
+		<li>Headphones</li>
+		<li>Electric Guitar</li>
+	</ol>
+
+	<ul data-ns-test="holidayList">
+		<li>Iceland</li>
+		<li>Japan</li>
+		<li>Puri</li>
+	</ul>
 
 </body>
 
