--- a/main.html
+++ b/main.html
@@ -10,18 +10,19 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<p>
 	<ol>
 		<li data-ns-test="shoppingList">Silver ornament</li>
-		<li>Headphones</li>
-		<li>Electric Guitar</li>
+		<li data-ns-test="shoppingList">Silver ornament>Headphones</li>
+		<li data-ns-test="shoppingList">Silver ornament>Electric Guitar</li>
 	</ol>
 
 	<ul>
 		<li data-ns-test="holidayList">Iceland</li>
-		<li>Japan</li>
-		<li>Puri</li>
+		<li data-ns-test="holidayList">Japan</li>
+		<li data-ns-test="holidayList">Puri</li>
 	</ul>
-
+</p>
 </body>
 
 </html>
